--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 JWT_SECRET_KEY = heelooo
+
+CLOUDINARY_CLOUD_NAME = dcbkw3qxl
+CLOUDINARY_API_KEY = 243584223752263
+CLOUDINARY_API_SECRET = Kewjp9TitjKkfDv3ilk3u6VcyHA
